--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==5.1.2
-djangorestframework==5.1.2
-djangorestframework-gis==5.1.2
+djangorestframework
+djangorestframework-gis
 setuptools==75.2.0
 psycopg2==2.9.9
 drf-yasg==1.21.7
